--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -273,6 +273,11 @@ nav + .container {
   z-index: 2;
 }
 
+#messages .list-group-item .fa-heart {
+  position: relative;
+  z-index: 3;
+}
+
 #messages .list-group-item {
   display: flex;
   align-items: flex-start;
