--- a/templates/home.html
+++ b/templates/home.html
@@ -40,8 +40,8 @@
               </h4>
             </li>
           </ul>
-          <button type="button" class="btn btn-primary translate-middle" data-toggle="modal" data-target="#exampleModal">
-            Launch demo modal
+          <button type="button" class="btn btn-primary translate-middle btn-sm ml-4" data-toggle="modal" data-target="#exampleModal">
+            New Message
           </button>
         </div>
       </div>
