--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -29,9 +29,12 @@
 
         <div class="edit-btn-area">
           <button class="btn btn-success">Edit this user!</button>
-          <a href="/users/{{ user_id }}" class="btn btn-outline-secondary">Cancel</a>
+          <a href="/users/{{ g.user.id }}" class="btn btn-outline-secondary">Cancel</a>
         </div>
       </form>
+      <div class="edit-btn-area mt-2">
+        <a href="/users/{{ g.user.id }}/pwdreset" class="btn btn-outline-secondary">Reset Password</a>
+      </div>
     </div>
   </div>
 
