added relationships to follow table, and blocked view and template

--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -62,6 +62,7 @@
       <h4 id="sidebar-username">@{{ user.username }}</h4>
       <p>{{ user.bio }}</p>
       <p class="user-location"><span class="fa fa-map-marker"></span>{{ user.location }}</p>
+      <a href="/users/{{user.id}}/block" class="btn btn-outline-secondary">Block Users</a>
     </div>
 
     {% block user_details %}
